page host ie width overflow fixes

--- a/styles/sass/modules/landing.scss
+++ b/styles/sass/modules/landing.scss
@@ -1,7 +1,7 @@
 .landing {
   @include flexbox();
   position: relative;
-  width: 100vw;
+  width: 100%;
   height: 100vh;
   color: #fff;
   font-family: "United Sans", script;
