--- a/styles/style.css
+++ b/styles/style.css
@@ -1074,7 +1074,7 @@ input {
   display: -webkit-flex;
   display: flex;
   position: relative;
-  width: 100vw;
+  width: 100%;
   height: 100vh;
   color: #fff;
   font-family: "United Sans", script;
